Adding Email registration and Installment Services